test/spec_vectors/i64/fail/module_24.wat
(module (func (result i64) (i64.gt_u (i32.const 0) (f32.const 0))))